@@ -9,11 +9,12 @@ included in the sources of this package and additionally can be obtained from
 Internet <https://www.gnu.org/licenses>.
 
 1.3.13 This release contains again a lot of major improvements for the still
-       undocumented OpenPGP interface. The PRNG from Botan is used for as an 
+       undocumented OpenPGP interface, e.g. C++ classes for basic structures
+       like public keys or signatures. The PRNG from Botan is used for as an 
        additional source of randomness, if LibTMCG is configured and built with
        the new option --with-botan. This reduces the impact of possible hidden
-       bugs in libgcrypt. Moreover, the hash funtion SHA3 is now emulated, if
-       the built-time version of libgcrypt is too old.
+       bugs in libgcrypt. Moreover, the hash funtion SHA3 is emulated, if the
+       built-time version of libgcrypt is too old to support it natively.
 1.3.12 Major improvements for OpenPGP interfaces have been achieved. Notable are
        the new classes for processing public key structures. Moreover, a second
        indepent hash algorithm (SHA3) has been included for computing the oracle
