@@ -8,6 +8,7 @@ in the sources of this package and additionally can be obtained from Internet
 <https://www.gnu.org/licenses>.
 
 * [2018-06-23] release 1.3.13 of LibTMCG
+* [2018-06-23] mpz_sprime: avoid waste of good random numbers
 * [2018-06-22] RFC4880: added tmcg_openpgp_stringtokey_t
 * [2018-06-21] RFC4880: added AlgorithmHashTextName(), DashEscapeFile()
 * [2018-06-19] RFC4880: added some stuff for cleartext signature framework
